# prism-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dump.dot  flake.nix  tmp.dot
.github/workflows/: ci.yml
benches/: dtmc_benches.rs  hyperfine_leader_bench.py
docs/: dd_restrict.md  dd_usage.md  dtmc_details.md  mdp_details.md
src/: Hmm things look okay from an API perspec.md  analyze.rs  ast.rs  constr_symbolic.rs  lib.rs  main.rs  parser.rs  prompt.md  reachability.rs  ref_manager.rs  sym_check.rs  symbolic_dtmc.rs
src/ast/: mod.rs  utils.rs
src/dd_manager/: dd.rs  protected_local.rs
src/parser/: mod.rs  parser.lalrpop
src/ref_manager/: local_roots_guard.rs  protected_slot.rs
tests/: dtmc_sym_check_tests.rs  dtmc_sym_constr_tests.rs  mdp_parser_tests.rs  parser_tests.rs
tests/dtmc/: brp.prism  brp.prop  herman3.prism  knuth_two_dice.prism  leader.prop  leader4_4.prism  leader5_6.prism  leader5_7.prism  leader6_6.prism  simple_dtmc.prism
tests/mdp/: robot.prop  simple_mdp.prop
